# ClarityDesk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKELETON.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: model-config.toml
config/app-profiles/: browser.json  terminal.json  vscode.json
crates/cd-cli/: Cargo.toml
crates/cd-cli/src/: main.rs
crates/cd-core/: Cargo.toml
crates/cd-core/src/: error.rs  lib.rs
crates/cd-core/src/analyzer/: mod.rs
crates/cd-core/src/capture/: mod.rs
crates/cd-core/src/models/: analysis.rs  capture.rs  mod.rs  settings.rs
crates/cd-core/src/ocr/: mod.rs
crates/cd-core/src/semantic/: mod.rs  ollama.rs  prompts.rs
docs/: scan-report.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Analysis/: AnalysisView.tsx
frontend/src/components/Dashboard/: DashboardView.tsx
frontend/src/components/Layout/: Sidebar.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/lib/: i18n.ts  tauri.ts
frontend/src/stores/: clarityStore.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: analyze.rs  capture.rs  mod.rs  settings.rs
