[workspace]
members = [
    "crates/cd-core",
    "crates/cd-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Rafael Yilmaz"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
thiserror   = "1"
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4", "serde"] }
tracing     = "0.1"
tracing-subscriber = "0.3"
reqwest     = { version = "0.12", features = ["json"] }
base64      = "0.22"
image       = "0.25"
tempfile    = "3"
