[package]
name    = "claritydesk-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "claritydesk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claritydesk-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cd-core = { path = "../crates/cd-core" }

tauri                     = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell        = "2"
tauri-plugin-fs           = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"

serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
anyhow.workspace     = true
tracing.workspace    = true
tracing-subscriber.workspace = true

[profile.release]
opt-level = 3
lto       = true
strip     = true
