[package]
name    = "cd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claritydesk"
path = "src/main.rs"

[dependencies]
cd-core.path  = "../cd-core"
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
