[package]
name    = "cd-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
tokio.workspace      = true
anyhow.workspace     = true
thiserror.workspace  = true
chrono.workspace     = true
uuid.workspace       = true
tracing.workspace    = true
reqwest.workspace    = true
base64.workspace     = true
image.workspace      = true
tempfile.workspace   = true

screenshots = "0.8"
regex-lite  = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
